--- a/templates/posts/post_detail.html
+++ b/templates/posts/post_detail.html
@@ -101,7 +101,7 @@
             {% endif %}
 
             <!-- 댓글 박스 -->
-            {% for comment in post_detail.comments.all %}
+            {% for comment in comments %}
             <div class="post_detail_comment_box">
                 <div class="post_detail_comment_smallbox">
                     <span style="background-image:url({{post_detail.user.avatar.url}})"
@@ -119,6 +119,27 @@
                         <div class="post_detail_comment_contents">{{comment.body}}</div>
                     </span>
                 </div>
+                {% for recomment in comment.comments.all  %}
+                <div class="post_detail_comment_box recomment">
+                    <img class="recomment_arrow" src="{% static 'posts/img/arrow.png' %}" alt="arrow image">
+                    <div class="post_detail_comment_smallbox">
+                        <span style="background-image:url({{post_detail.user.avatar.url}})"
+                            class="post_detail_profile_img"></span>
+                        <span class="post_detail_comment_information">
+                            <div class="post_detail_comment_nickname_time">
+                                <span class="post_detail_comment_nickname">{{recomment.user.nickname}}</span>
+                                <span class="post_detail_comment_time">{{recomment.created_date|date:"Y.m.d f"}}</span>
+                                {% if recomment.user == request.user %}
+                                <a class="post_detail_comment_delete"
+                                    href="{% url 'posts:comment_delete' post_detail.id comment.id %}"><img
+                                        src="{% static 'posts/img/trash.png' %}"></a>
+                                {% endif %}
+                            </div>
+                            <div class="post_detail_comment_contents">{{recomment.body}}</div>
+                        </span>
+                    </div>
+                </div>
+                {% endfor %}
                 <div class="post_detail_leave_a_comment">답글 쓰기</div>
             </div>
             {% empty %}
