--- a/static/core/css/base.css
+++ b/static/core/css/base.css
@@ -106,7 +106,7 @@ header {
   z-index: 10;
   position: fixed;
   bottom: 0;
-  width: 100vw;
+  width: 100%;
   height: 70px;
   display: flex;
 }
