--- a/static/posts/css/post_detail.css
+++ b/static/posts/css/post_detail.css
@@ -1,3 +1,7 @@
+.content {
+  padding-bottom: 0;
+}
+
 .post_detail_allbox {
   padding: 0 20px;
 }
@@ -145,6 +149,9 @@
   font-size: 13px;
   color: #868686;
 }
+.post_detail_leave_a_comment:hover {
+  cursor: pointer;
+}
 .post_detail_comment_reply_arrow {
   padding: 10px;
 }
@@ -166,8 +173,15 @@
   border-radius: 3px;
 }
 .post-form {
+  padding: 0 20px;
+  z-index: 10;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 70px;
   display: flex;
-  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 .post_comment_submit {
   width: 15%;
