--- a/static/posts/css/post_detail.css
+++ b/static/posts/css/post_detail.css
@@ -179,6 +179,7 @@
   border-radius: 3px;
 }
 .post-form {
+  background-color: white;
   padding: 0 20px;
   z-index: 10;
   position: fixed;
@@ -188,6 +189,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.post-form > strong > a {
+  font-weight: bold;
+  text-decoration-line: underline;
+  text-decoration-color: #5d2c1d;
+  color: #5d2c1d !important;
 }
 .post_comment_submit {
   width: 15%;
