--- a/templates/posts/post_detail.html
+++ b/templates/posts/post_detail.html
@@ -127,7 +127,7 @@
                                 <span class="post_detail_comment_time">{{recomment.created_date|date:"Y.m.d f"}}</span>
                                 {% if recomment.user == request.user %}
                                 <a class="post_detail_comment_delete"
-                                    href="{% url 'posts:comment_delete' post_detail.id comment.id %}"><img
+                                    href="{% url 'posts:comment_delete' post_detail.id recomment.id %}"><img
                                         src="{% static 'posts/img/trash.png' %}"></a>
                                 {% endif %}
                             </div>
@@ -139,7 +139,9 @@
 
                 {% if user.is_authenticated %}
                 <div class="post_detail_leave_a_comment">
-                    <span class="jsTargetRecommentButton" onclick="addRecoment('{{comment.pk}}')">답글 쓰기</span>
+                    <span class="jsTargetRecommentButton {{comment.pk}}" value='{{comment.pk}}'
+                        onclick="addRecoment(event)">답글
+                        쓰기</span>
                 </div>
                 {% endif %}
             </div>
@@ -164,7 +166,8 @@
     <input class="post_comment_submit" type="submit" value="등록" style="border-radius: 3px;">
 </form>
 {% else %}
-<div style="font-size:14px;" class="post-form">로그인 후에 댓글작성이 가능합니다</div>
+<div style="font-size:14px;" class="post-form"><strong><a href="{% url 'users:login' %}">로그인</a></strong>&nbsp; 후에 댓글작성이
+    가능합니다</div>
 {% endif %}
 {% endblock bottom_icons %}
 
