--- a/templates/map/main_map.html
+++ b/templates/map/main_map.html
@@ -43,19 +43,25 @@
 <div class="map_init_box jsMapInit">
     <div class="init_blank_top header_height"></div>
     <map name="element_map_map">
-        <area onclick="startMap(event)" shape="poly" coords="207,157,192,135,152,143,155,187,191,195,207,156"
+        <area onclick="startMap(event)" shape="poly" coords="164,194,205,181,202,138,174,130,152,149,166,193"
             alt="서울" />
         <area onclick="startMap(event)" shape="poly"
-            coords="196,134,150,142,134,150,106,140,132,118,138,128,156,113,168,93,165,76,198,65,206,79,250,110,240,138,264,160,266,190,257,209,215,243,199,235,169,244,161,229,146,202,126,198,145,179,137,152,151,146,156,188,193,196,209,157,193,132"
-            alt="경기/인천" />
+            coords="159,177,157,144,148,105,186,71,241,116,233,137,260,160,256,205,209,239,193,232,161,240,143,202,169,194,201,181,212,152,193,138,165,138,158,163,161,195"
+            alt="경기" />
+        <area onclick="startMap(event)" shape="poly" coords="149,145,139,134,110,149,125,200,167,194" alt="인천" />
         <area onclick="startMap(event)" shape="poly"
             coords="265,160,248,104,196,63,293,59,319,21,420,210,395,221,339,219,301,202,277,200,264,215,255,210,265,194,265,163,261,158"
             alt="강원" />
         <area onclick="startMap(event)" shape="poly"
-            coords="208,245,219,292,232,302,244,346,227,360,210,348,171,340,140,360,132,333,135,312,125,306,124,276,82,264,96,251,118,245,109,229,132,219,154,233,168,246,208,245"
-            alt="충남/대전/세종" />
+            coords="210,261,200,232,165,239,129,218,82,259,120,282,136,356,161,354,177,335,212,348,222,357,245,346,235,339,201,339,189,305,188,262,209,260,209,260"
+            alt="충남" />
+        <area onclick="startMap(event)" shape="poly" coords="233,265,193,264,197,309,209,307,222,292,240,294,231,266"
+            alt="세종" />
+        <area onclick="startMap(event)" shape="poly" coords="203,314,209,336,246,336,250,294,222,293,202,313,200,310"
+            alt="대전" />
+
         <area onclick="startMap(event)" shape="poly"
-            coords="246,335,250,345,269,350,284,329,271,315,266,270,311,242,316,252,330,248,328,236,343,220,293,201,273,205,266,216,220,241,207,251,208,269,221,293,231,301,235,322,248,341,244,338,242,331"
+            coords="320,251,328,241,342,216,284,194,207,235,214,258,236,262,251,291,249,346,263,350,278,343,285,326,269,312,269,270,311,243,318,250"
             alt="충북" />
         <area onclick="startMap(event)" shape="poly"
             coords="272,350,256,352,246,344,231,356,214,355,156,352,131,358,145,374,153,378,147,384,134,388,123,409,137,409,115,431,136,438,164,422,186,427,198,437,218,440,229,435,239,442,252,436,250,407,256,382,270,371,273,351,267,351,268,351,268,352"
@@ -63,12 +69,16 @@
         <area onclick="startMap(event)" shape="poly"
             coords="241,447,258,486,265,538,237,557,195,553,193,531,203,517,187,527,171,555,171,574,169,593,152,580,124,601,123,549,99,571,83,588,70,575,101,532,57,522,78,461,106,452,115,433,135,442,167,425,184,432,202,445,228,441,239,447"
             alt="전남/광주" />
+        <area onclick="startMap(event)" shape="poly" coords="314,401,318,355,370,349,372,396,347,403,312,399"
+            alt="대구" />
         <area onclick="startMap(event)" shape="poly"
-            coords="417,210,396,220,342,221,322,237,322,248,304,244,265,266,264,317,283,333,277,350,275,372,292,378,305,401,385,399,432,389,445,339,427,348,428,257,414,205"
-            alt="경북/대구" />
+            coords="309,355,308,397,268,368,281,326,273,270,331,250,345,228,417,209,442,342,435,386,381,387,373,344,313,346"
+            alt="경북" />
         <area onclick="startMap(event)" shape="poly"
-            coords="299,404,286,382,252,425,256,441,240,449,260,479,267,498,270,519,293,514,274,486,291,481,296,493,307,508,315,499,325,512,328,496,340,503,348,523,365,498,356,474,345,480,342,469,352,472,353,461,369,471,358,450,381,427,404,422,423,425,434,393,357,407,299,402"
-            alt="경남/울산" />
+            coords="270,374,293,378,302,402,357,406,382,405,382,431,355,454,361,513,339,518,297,502,284,519,253,484,239,438,254,437,248,402,254,380,261,376"
+            alt="경남" />
+        <area onclick="startMap(event)" shape="poly" coords="438,390,383,398,386,431,405,424,417,433,432,431,441,402"
+            alt="울산" />
         <area onclick="startMap(event)" shape="poly" coords="436,452,401,473,376,470,365,439,391,424,435,448"
             alt="부산" />
         <area onclick="startMap(event)" shape="poly" coords="196,634,60,633,60,708,192,707,195,631" alt="제주" />
