게시글 수정 페이지 사진업로드 버튼 수정

--- a/static/posts/css/post_write.css
+++ b/static/posts/css/post_write.css
@@ -41,11 +41,10 @@ option:focus {
 .post_write_submit_img_box {
   display: flex;
   justify-content: flex-end;
-  padding: 10px 0;
+  padding: 10px;
 }
 .post_write_img_box {
   display: flex;
-  justify-content: flex-end;
   align-items: center;
   margin-right: 12px;
 }
@@ -53,13 +52,24 @@ option:focus {
   width: 23px;
   margin-right: 5px;
 }
-.post_write_submit {
-  background-color: black;
+.image_delete{
+  width: 90px;
+  height: 30px;
+  text-align: center;
+  background-color: #5d2c1d;
   border: none;
   border-radius: 5px;
   color: white;
   padding: 8px 12px;
   margin-right: 10px;
+}
+.post_write_submit {
+  background-color: #5d2c1d;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  padding: 8px 12px;
+  margin-left: 10px;
 }
 
 #id_photo {
