--- a/templates/users/profileimage_form.html
+++ b/templates/users/profileimage_form.html
@@ -1,4 +1,10 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block css %}
+<link rel="stylesheet" href="{% static 'users/css/profile_update.css' %}">
+{% endblock css %}
+
 {% block title %}
 프로필 수정
 {% endblock title %}
@@ -6,6 +12,6 @@
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{form.as_p}}
-    <input type="submit">
+    <input class="profile_image_submit" type="submit" style="border-radius: 3px;" value="등록">
 </form>
 {% endblock content %}
