--- a/static/users/css/profile_update.css
+++ b/static/users/css/profile_update.css
@@ -25,8 +25,8 @@
   height: 30px;
   border-radius: 50%;
   position: absolute;
-  margin-top: 70px;
-  margin-left: 42px;
+  margin-top: 67px;
+  margin-left: 30px;
 }
 
 .content {
@@ -95,11 +95,15 @@ div.profile_update_input {
   cursor: pointer;
 }
 
+.profile_image_update{
+  display: flex;
+  justify-content: center;
+}
+
 .profile_image_submit{
   background-color: #5d2c1d;
   border: none;
   border-radius: 5px;
   color: white;
   padding: 8px 12px;
-  margin-right: 10px;
 }
