--- a/static/bakeries/css/bakery_rank.css
+++ b/static/bakeries/css/bakery_rank.css
@@ -98,6 +98,24 @@
   padding-top: 10px;
 }
 
+.menu_5 {
+  margin: 10px;
+}
+
+.menu_5__photo {
+  width: 50px;
+  height: 50px;
+  filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.25));
+  background-color: white;
+  border-radius: 50%;
+}
+
+.menu_5__name {
+  font-size: 11px;
+  text-align: center;
+  padding-top: 10px;
+}
+
 hr {
   background: #f1f1f1;
 }
