input 모바일 css제거, 버튼 및 글쓰기보더 색상통일

--- a/static/bakeries/css/review_write.css
+++ b/static/bakeries/css/review_write.css
@@ -51,10 +51,10 @@
   margin-right: 5px;
 }
 .post_write_submit {
-  background-color: black;
+  background-color: #5d2c1d;
   border: none;
   border-radius: 5px;
-  color: white;
+  color: #fff6ed;
   padding: 8px 12px;
   margin-right: 10px;
 }
