--- a/static/users/css/my_profile.css
+++ b/static/users/css/my_profile.css
@@ -46,13 +46,15 @@ a {
   width: 100px;
   height: 30px;
   text-align: center;
-  border: 1px solid #797979;
+  border: 0;
+  outline: 0;
   box-sizing: border-box;
   border-radius: 5px;
   font-size: 12px;
   font-weight: bold;
   text-decoration-line: none;
-  color: black;
+  background-color: #5d2c1d;
+  color: #fff6ed;
 }
 
 .line {
