--- a/static/posts/css/post_write.css
+++ b/static/posts/css/post_write.css
@@ -1,7 +1,7 @@
 /* 글쓰기 제목 박스 */
 .post_write_title_box {
-  border-top: solid 1px #a6a6a6;
-  border-bottom: solid 1px #a6a6a6;
+  border-top: solid 1px #eeeeee;
+  border-bottom: solid 1px #eeeeee;
 }
 .post_write_title_box input {
   border: none;
@@ -54,10 +54,10 @@ option:focus {
   margin-right: 5px;
 }
 .post_write_submit {
-  background-color: black;
+  background-color: #5d2c1d;
   border: none;
   border-radius: 5px;
-  color: white;
+  color: #fff6ed;
   padding: 8px 12px;
   margin-right: 10px;
 }
