--- a/static/users/css/profile_update.css
+++ b/static/users/css/profile_update.css
@@ -84,8 +84,8 @@ div.profile_update_input {
   height: 55px;
   border-radius: 8px;
   border: none;
-  background-color: #727272;
-  color: white;
+  background-color: #5d2c1d;
+  color: #fff6ed;
   font-size: 17px;
   font-weight: bold;
   font-family: "NanumSquare", sans-serif;
