--- a/templates/posts/post_detail.html
+++ b/templates/posts/post_detail.html
@@ -92,7 +92,7 @@
 
                 {% csrf_token %}
                 <span class="post_detail_add_comment">{{ form.body }}</span>
-                <input class="post_comment_submit" type="submit" value="등록" style="border-radius: 3px;">
+                <input class="post_comment_submit" type="submit" value="등록" style="border-radius: 3px; background-color: #5d2c1d; color:#fff6ed;">
 
 
             </form>
