--- a/templates/bakeries/bakery_review_list.html
+++ b/templates/bakeries/bakery_review_list.html
@@ -49,9 +49,19 @@
             </div>
             <div class="bakery_review_star">{{review.rating}}</div>
         </div>
-        <img class="delete_trash_icon" src="{% static 'bakeries/img/trash.png' %}" alt="쓰레기통 아이콘">
+        {% if review.user == request.user %}
+        <a href="{% url 'bakeries:review_delete' review.id %}">
+            <img class="delete_trash_icon" src="{% static 'bakeries/img/trash.png' %}" alt="쓰레기통 아이콘">
+        </a>
+        {% endif %}
     </div>
     <div class="bakery_review_comment">{{review.body}}</div>
 </div>
 {% endfor %}
 {% endblock content %}
+
+<script>
+    function button1_click() {
+        alert("로그인이 필요합니다.");
+    }
+</script>
