--- a/templates/posts/post_update.html
+++ b/templates/posts/post_update.html
@@ -35,13 +35,17 @@
     <div class="post_write_contents_box">{{ form.body }}</div>
     {{ form.user }}
     <!-- 글쓰기 이미지추가&등록 박스 -->
-    <div class="post_write_submit_img_box">
-        <span class="post_write_img_box">
+    <div class="post_write_submit_img_box"></div>
+    <div class="post_write_img_box">
+        <input type="file" name="photo" accept="image/*" id="id_photo">
+        <div class="post_update_left">
             <input type="checkbox" name="photo-clear" id="photo-clear_id">
-            <label for="photo-clear_id">사진 삭제</label>
-            <input type="file" name="photo" accept="image/*" id="id_photo">
-        </span>
-        <input class="post_write_submit" type="submit" style="border-radius: 3px;" value="등록">
+            <label for="photo-clear_id" class="image_delete">사진 삭제</label>
+        </div>
+    </div>
+    <br>
+    <div class="post_update_submit_bigbox">
+        <input class="post_write_submit" type="submit" style="border-radius: 3px;" value="수정하기">
     </div>
 
 </form>
