--- a/static/posts/css/post_write.css
+++ b/static/posts/css/post_write.css
@@ -42,7 +42,7 @@ option:focus {
 /* 글쓰기 이미지 추가&등록 박스 */
 .post_write_submit_img_box {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   padding: 10px;
 }
 .post_write_img_box {
@@ -50,6 +50,9 @@ option:focus {
   justify-content: space-between;
   align-items: center;
   padding: 0 10px;
+}
+span.post_write_img_box {
+  padding: 0;
 }
 .post_write_img_box img {
   width: 23px;
@@ -99,5 +102,6 @@ option:focus {
   display: flex;
   width: 100%;
   padding: 0 10px;
+  margin-top: 30px;
   justify-content: flex-end;
 }
