--- a/templates/posts/post_update.html
+++ b/templates/posts/post_update.html
@@ -3,7 +3,7 @@
 
 <!-- 홈페이지 타이틀 -->
 {% block title %}
-게시글
+글수정
 {% endblock title %}
 
 
@@ -16,10 +16,11 @@
 {% block header %}
 <div class="header__wrapper">
     <div class="header__leftbox">
-        <img class="left_arrow" src="{% static 'core/img/left_arrow.png' %}" alt="left_arrow icon">
+        <img onclick="history.go(-1);" class="left_arrow" src="{% static 'core/img/left_arrow.png' %}"
+            alt="left_arrow icon">
     </div>
     <div class="header__midbox">
-        <span class="header__title">글쓰기</span>
+        <span class="header__title">글수정</span>
     </div>
     <div class="header__rightbox"></div>
 </div>
