--- a/static/posts/css/post_detail.css
+++ b/static/posts/css/post_detail.css
@@ -82,10 +82,12 @@
   max-height: 150px;
 }
 .post_detail_update_delete {
-  border: solid 1px black;
+  border: 0;
+  outline: 0;
   padding: 5px 7px;
   margin-top: 10px;
-  background-color: white;
+  background-color: #5d2c1d;
+  color: #fff6ed;
   margin-left: 5px;
   border-radius: 5px;
 }
@@ -201,6 +203,8 @@
   height: 35px;
   margin: 10px 0;
   border: none;
+  background-color: #5d2c1d;
+  color: #fff6ed;
 }
 a:link {
   color: black;
