--- a/static/posts/css/post_write.css
+++ b/static/posts/css/post_write.css
@@ -2,8 +2,8 @@ input
 
 /* 글쓰기 제목 박스 */
 .post_write_title_box {
-  border-top: solid 1px #a6a6a6;
-  border-bottom: solid 1px #a6a6a6;
+  border-top: solid 1px #eeeeee;
+  border-bottom: solid 1px #eeeeee;
 }
 .post_write_title_box input {
   border: none;
