--- a/templates/bakeries/bakery_detail.html
+++ b/templates/bakeries/bakery_detail.html
@@ -72,6 +72,7 @@
     <!-- 가게 위치 박스 -->
     <div class="bakery_location_box">
         <div id="detailMap" class="bakery_location"></div>
+        <div class="blank_bakery_location"></div>
         <div class="bakery_location_address">{{bakery_detail.address}}</div>
     </div>
 
