--- a/static/bakeries/css/bakery_detail.css
+++ b/static/bakeries/css/bakery_detail.css
@@ -77,6 +77,7 @@ a {
 .bakery_location_box {
   margin-bottom: 17px;
   border-top: 1px solid #f1eded;
+  position: relative;
 }
 .bakery_location {
   width: 100%;
@@ -84,6 +85,17 @@ a {
   margin-top: 17px;
   border-radius: 5px;
 }
+
+.blank_bakery_location {
+  position: absolute;
+  top: 0;
+  z-index: 5;
+  width: 100%;
+  height: 110px;
+  margin-top: 17px;
+  border-radius: 5px;
+}
+
 .bakery_location_address {
   padding-top: 7px;
   color: #524949;
