--- a/static/map/css/map.css
+++ b/static/map/css/map.css
@@ -85,6 +85,7 @@ header {
   border-radius: 10px;
   border: none;
   padding-left: 5px;
+  background-color: white;
 }
 
 .region_select_box > select:focus {
